# Trade-Automator

./: .env  .env.example  .replit  LOCAL_WINDOWS_SETUP.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  setup-dev.py  setup.md  start-dev.bat  start-dev.js  start-server.bat  vite.config.js  vitest.config.ts  vitest_output.txt
attached_assets/: Pasted--rest-express-1-0-0-dev-7-15-22-PM-express-serving-on-p_1772047371883.txt  Pasted-Create-a-complete-trading-automation-system-with-these-_1766086481618.txt
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/lib/: api.ts  (+1 more)
md/: DEVELOPMENT.md  readme.md
md/feature/: advanced_risk_management_20260301.md  dashboard_analytics_20260301.md  enhanced_signal_processing_20260301.md  feature_suggestions_20260301.md  multi_account_copy_trading_20260301.md  notifications_alerts_20260301.md  readme.md
md/walkthrough/: notifications_alerts_walkthrough_20260301.md  setup_walkthrough_20260301.md  test_suite_walkthrough_20260301.md
python/: ctrader_client.py  fetch_history.py  notifier.py  requirements.txt  telegram_listener.py  telegram_session.session  telegram_session.session-journal  verify_connectivity.py  verify_signals.py
scripts/: ensure_db.ts  seed_data.ts
server/: db.ts  routes.ts  standalone-test.ts  storage.ts  test-server.ts
setup/: LOCAL_WINDOWS_SETUP.md
shared/: schema.ts
tests/backend/: copy_trading.test.ts  core.test.ts  example.test.ts  notifications.test.ts  planned_features.test.ts
(+19 files in other folders)
