[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "finnhub-python>=2.4.27",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "telethon>=1.42.0",
    "yfinance>=1.2.0",
]
